name cut off fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,17 @@ p.clickable {
   cursor: pointer;
 }
 
-p,
 h2,
 input,
 .search-bar,
 .search-button,
 .long-button {
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.2rem;
+}
+
+p {
+  letter-spacing: 0.07rem;
+  margin-bottom: 0;
 }
 
 .container {
